force-app/main/default/objects/Case/fields/AssignUser__c.field-meta.xml
<CustomField>
    <fullName>AssignUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>アプリケーション「バウチャー管理」で使用</description>
    <label>対象者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CaseAssignUser</relationshipName>
    <type>Lookup</type>
</CustomField>