force-app/main/default/objects/Case/fields/AssignUserId__c.field-meta.xml
<CustomField>
    <fullName>AssignUserId__c</fullName>
    <description>2021/02/04 ゲストユーザの権限変更に伴う変更対応にて追加</description>
    <label>対象者ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>