force-app/main/default/objects/Case/fields/UseOfReferenceProblems__c.field-meta.xml
<CustomField>
    <fullName>UseOfReferenceProblems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>参考問題を利用する</label>
    <type>Checkbox</type>
</CustomField>