force-app/main/default/objects/Case/fields/WillExam__c.field-meta.xml
<CustomField>
    <fullName>WillExam__c</fullName>
    <label>予定日</label>
    <type>Date</type>
</CustomField>