force-app/main/default/objects/Case/recordTypes/VoucherManagement.recordType-meta.xml
<RecordType>
    <fullName>VoucherManagement</fullName>
    <active>true</active>
    <businessProcess>バウチャー管理</businessProcess>
    <description>アプリケーション「バウチャー管理」で使用</description>
    <label>バウチャー管理</label>
</RecordType>